# particle-imaging-models

./: .dockerignore  .gitignore  README.md  RELEASING.md  UV_MIGRATION_CLUSTER_HANDOFF.md  environment.yml  example.env  install.sh  pyproject.toml
.github/: release.yml
.github/docker/: Dockerfile  Dockerfile.dev  Dockerfile.nersc  entrypoint.sh  pimm
.github/docker/common/: install_cuda_exts.sh  install_flash_attn.sh  install_pyg.sh  install_python_deps.sh  install_system.sh  install_torch.sh  versions.sh
.github/docker/requirements/: requirements-cuda.txt  requirements-dev.txt  requirements.txt
.github/scripts/: build_native_wheels.py  modal_ci.py  modal_docs_figures.py  native-wheels.json  verify_native_wheel_lock.py
.github/workflows/: backfill-ghcr.yml  docker-dev.yml  docker.yml  docs-figures.yml  docs.yml  native-wheels-release.yml  release.yml  test-gpu.yml
configs/_base_/: default_runtime.py
configs/detector/_base_/: jaxtpc_seg.py
configs/detector/semseg/: semseg-pt-v3m2-jaxtpc-5cls.py
configs/hmae/: pretrain-hmae-v1m1-pilarnet-1m-amp-seed0.py  pretrain-hmae-v1m1-ptv4-pilarnet-1m-amp-seed0.py
configs/lejepa/pretrain/: pretrain-lejepa-v1m5-pilarnet-small.py  pretrain-lejepa-v1m5-pilarnet.py
configs/panda/panseg/: detector-v1m1-pt-v3m2-ft-pid-dec.py  detector-v1m1-pt-v3m2-ft-pid-fft.py  detector-v1m1-pt-v3m2-ft-vtx-dec.py  detector-v1m1-pt-v3m2-ft-vtx-fft.py  detector-v1m2-pt-v3m2-ft-pid-dec.py  detector-v1m2-pt-v3m2-ft-pid-fft.py  detector-v4-pt-v3m2-ft-pid-dec.py  detector-v4-pt-v3m2-ft-pid-fft.py  detector-v4-pt-v3m2-ft-pid-scratch.py  detector-v4-pt-v3m2-ft-vtx-dec.py  detector-v4-pt-v3m2-ft-vtx-fft.py  detector-v4-pt-v3m2-ft-vtx-scratch.py  detector-v5-pt-v3m2-ft-joint-fft.py  detector-v5-pt-v3m2-ft-joint-pxpypz-dec-noaug.py  detector-v5-pt-v3m2-ft-joint-pxpypz-dec.py  detector-v5-pt-v3m2-ft-joint-pxpypz-fft-noaug.py  detector-v5-pt-v3m2-ft-joint-pxpypz-fft.py  detector-v5-pt-v3m2-ft-joint-pxpypz-lin-noaug.py  detector-v5-pt-v3m2-ft-joint-pxpypz-lin.py  detector-v5-pt-v3m2-ft-pid-dec.py  detector-v5-pt-v3m2-ft-pid-fft-detector.py  detector-v5-pt-v3m2-ft-pid-fft.py  detector-v5-pt-v3m2-ft-pid-scratch.py  detector-v5-pt-v3m2-ft-vtx-dec.py  detector-v5-pt-v3m2-ft-vtx-fft-detector.py  detector-v5-pt-v3m2-ft-vtx-fft.py  detector-v5-pt-v3m2-ft-vtx-scratch.py
configs/panda/pretrain/: pretrain-sonata-v1m1-pilarnet-smallmask-v3m8.py  pretrain-sonata-v1m1-pilarnet-smallmask.py  pretrain-sonata-v1m3-pilarnet-smallmask-litept-v1m2-M-observable-parquet-stream.py  pretrain-sonata-v1m3-pilarnet-smallmask-litept-v1m2-M-observable-parquet.py
configs/panda/semseg/: semseg-pt-v3m2-pilarnet-ft-5cls-dec.py  semseg-pt-v3m2-pilarnet-ft-5cls-fft.py  semseg-pt-v3m2-pilarnet-ft-5cls-lin.py
configs/polarmae/semseg/: semseg-polarmae-pilarnet-fft.py  semseg-polarmae-pilarnet-peft.py
configs/tests/: tiny_semseg.py  tiny_semseg_crash.py
configs/voltmae/: pretrain-voltmae-pilarnet-L.py  pretrain-voltmae-pilarnet.py  pretrain-voltmae-v1m2-pilarnet.py
docker/: Dockerfile  Dockerfile.nersc  entrypoint.sh
docs/: .gitignore  DETECTOR_DATASET.md  Makefile  README.md  gen_api.py  requirements.txt
docs/audit/: README.md
docs/audit/raw/: 1-newcomer-onboarding.md  2-panda-my-dataset.md  3-byo-model-substrate.md  4-findability-and-links.md
docs/source/: conf.py  index.md
docs/source/_static/: custom-icons.js  custom.css  launch_selector.css  (+1 more)
launch/: NERSC_CHAIN.md  README.md  SLURM_CHAIN.md  defaults.yaml
launch/runs/: e050_tail.yaml
launch/sites/: gcloud.yaml  local.yaml  nersc-container.yaml  nersc.yaml  s3df-container.yaml  s3df.yaml  slurm.yaml
libs/cnms/: pyproject.toml  setup.py
libs/pointgroup_ops/: pyproject.toml  setup.py
libs/pointgroup_ops/functions/: functions.py
libs/pointgroup_ops/src/: bfs_cluster.cpp
libs/pointops/: pyproject.toml  setup.py
libs/pointops/functions/: aggregation.py  attention.py  grouping.py  interpolation.py  query.py  sampling.py  subtraction.py
libs/pointrope/: __init__.py  pointrope_cuda.py  pyproject.toml  setup.py
libs/pytorch3d_ops/: pyproject.toml  setup.py
libs/pytorch3d_ops/pytorch3d_ops/: __init__.py
libs/serialize_cuda/: README.md  bindings.cpp  hilbert_cuda.cu  hilbert_cuda_approx.cu  morton_cuda.cu  pyproject.toml  setup.py
pimm/: __init__.py  run_stats.py  test.py  train.py
pimm/cli/: __init__.py  __main__.py  common.py  configs.py  export.py  launch.py  main.py  submit.py  watchdog.py
pimm/datasets/: __init__.py  builder.py  dataloader.py  defaults.py  detector_transforms.py  jaxtpc_dataset.py  lucid_dataset.py  lucid_event_ssl.py  pilarnet.py  stateful.py  test_fragments.py  transform.py  utils.py
pimm/distributed/: __init__.py  distributed.py
pimm/engines/: _train_utils.py  defaults.py  test.py  train.py
pimm/export/: __init__.py  api.py  checkpoint.py
pimm/launch/: __init__.py  compat.py  config.py  gcloud.py  local.py  schema.py  submit.py  utils.py  watchdog.py
pimm/models/: __init__.py  default.py  lora.py  modules.py
pimm/utils/: __init__.py  cache.py  checkpoints.py  comm.py  config.py  env.py  events.py  logger.py  misc.py  optimizer.py  path.py  registry.py  scheduler.py  timer.py  visualization.py  warnings.py
scripts/: build_image.sh  nersc_env.sh  test.sh  train.sh
scripts/2026-07-20/: submit1.sh  submit2.sh  upload_pilarnet_gcs.sh
scripts/2026-07-22/: run_target_stats.sh
scripts/pilarnet/: build_points_index.py  split_dataset.py  stage_lscratch.sh
scripts/slurm/: multinode.nersc.sbatch  multinode.slurm.sbatch
tests/: __init__.py  conftest.py  test_jaxtpc_dataset.py  test_launch_torchrun.py  test_lucid_dataset.py  test_serialize_cuda.py  utils.py
tests/integration/: test_cuda_runtime.py  test_hf_model_loading.py  test_jaxtpc_dataset.py  test_lucid_dataset.py  test_metric_baselines.py  test_pilarnet_mini.py  test_tiny_training.py
tests/unit/: test_attention.py  test_launch_command_tracking.py  test_launch_compat.py  test_launch_gcloud.py  test_launch_rendering.py  test_linear_probe_checkpoint_loading.py  test_pimm_warnings.py  test_wandb_resume.py
(+227 files in other folders)
