[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pimm"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "PyYAML",
    "submitit",
    "tyro",
    "addict",
    "yapf",
]

[dependency-groups]
train = [
    "cmake; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "h5py; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tensorboardx; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "wandb; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "einops; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "termcolor; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "matplotlib; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "scikit-learn; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nvidia-ml-py; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "rich; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "pandas; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "huggingface-hub; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "safetensors; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "timm; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "regex; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch==2.5.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.20.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchdata; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "ninja; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch-geometric; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch-scatter; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch-sparse; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch-cluster; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "spconv-cu124; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "pointrope; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "pointops; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "pointgroup-ops; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "cnms; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "pytorch3d-ops; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "serialize-cuda; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
flash-attn = [
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.5.4/flash_attn-2.8.3%2Bcu124torch2.5-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
dev = [
    "black",
    "jupyterlab",
    "pytest",
]
nersc = [
    "cython",
    "mpi4py",
]
docs = [
    "linkify-it-py>=2.0",
    "myst-parser>=2.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "sphinx-sitemap>=2.5",
    "sphinx-togglebutton>=0.3",
    "sphinx-book-theme>=1.1",
    "sphinx>=7.2",
]

[project.scripts]
pimm = "pimm.cli.main:main"

[tool.setuptools.packages.find]
include = ["pimm*"]

[tool.uv]
required-version = ">=0.11.1"
default-groups = ["train", "flash-attn"]
concurrent-builds = 1
cache-keys = [
    { file = "pyproject.toml" },
    { file = "pimm/**/*.py" },
]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torch-scatter = { index = "pyg-cu124" }
torch-sparse = { index = "pyg-cu124" }
torch-cluster = { index = "pyg-cu124" }
pointrope = { url = "https://github.com/DeepLearnPhysics/particle-imaging-models/releases/download/native-wheels-cu124-torch2.5-cp310-v1/pointrope-0.1.0%2Bcu124torch2.5-cp310-cp310-linux_x86_64.whl" }
pointops = { url = "https://github.com/DeepLearnPhysics/particle-imaging-models/releases/download/native-wheels-cu124-torch2.5-cp310-v1/pointops-1.0.0%2Bcu124torch2.5-cp310-cp310-linux_x86_64.whl" }
pointgroup-ops = { url = "https://github.com/DeepLearnPhysics/particle-imaging-models/releases/download/native-wheels-cu124-torch2.5-cp310-v1/pointgroup_ops-0.0.0%2Bcu124torch2.5-cp310-cp310-linux_x86_64.whl" }
cnms = { url = "https://github.com/DeepLearnPhysics/particle-imaging-models/releases/download/native-wheels-cu124-torch2.5-cp310-v1/cnms-2.0.0%2Bcu124torch2.5-cp310-cp310-linux_x86_64.whl" }
pytorch3d-ops = { url = "https://github.com/DeepLearnPhysics/particle-imaging-models/releases/download/native-wheels-cu124-torch2.5-cp310-v1/pytorch3d_ops-0.7.9%2Bcu124torch2.5-cp310-cp310-linux_x86_64.whl" }
serialize-cuda = { url = "https://github.com/DeepLearnPhysics/particle-imaging-models/releases/download/native-wheels-cu124-torch2.5-cp310-v1/serialize_cuda-0.1.0%2Bcu124torch2.5-cp310-cp310-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pyg-cu124"
url = "https://data.pyg.org/whl/torch-2.5.0+cu124.html"
format = "flat"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-ra"
markers = [
    "gpu: requires a CUDA-capable GPU and CUDA runtime",
    "external_data: requires data outside the source checkout",
    "external_model: downloads a model from an external registry",
    "cluster: requires a managed cluster or scheduler environment",
    "distributed: requires at least two GPUs for multi-rank training",
]
