[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnms"
version = "2.0.0+cu126torch2.13"
dependencies = ["torch"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "setup.py" },
    { file = "cnms/**/*.py" },
    { file = "csrc/**/*.cpp" },
    { file = "csrc/**/*.cu" },
    { file = "csrc/**/*.cuh" },
    { file = "csrc/**/*.h" },
    { file = "csrc/**/*.hpp" },
    { env = "TORCH_CUDA_ARCH_LIST" },
    { env = "CUDA_HOME" },
    { env = "CC" },
    { env = "CXX" },
]
