[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointgroup-ops"
version = "0.0.0+cu126torch2.10"
dependencies = ["torch"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "setup.py" },
    { file = "functions/**/*.py" },
    { file = "src/**/*.cpp" },
    { file = "src/**/*.cu" },
    { file = "src/**/*.cuh" },
    { file = "src/**/*.h" },
    { file = "src/**/*.hpp" },
    { env = "TORCH_CUDA_ARCH_LIST" },
    { env = "CUDA_HOME" },
    { env = "CC" },
    { env = "CXX" },
]
