[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointops"
version = "1.0.0+cu124torch2.5"
dependencies = ["numpy", "torch"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "setup.py" },
    { file = "__init__.py" },
    { file = "functions/**/*.py" },
    { file = "src/**/*.cpp" },
    { file = "src/**/*.cu" },
    { file = "src/**/*.cuh" },
    { file = "src/**/*.h" },
    { file = "src/**/*.hpp" },
    { env = "TORCH_CUDA_ARCH_LIST" },
    { env = "CUDA_HOME" },
    { env = "CC" },
    { env = "CXX" },
]
