[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointrope"
version = "0.1.0"
dependencies = ["torch"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "setup.py" },
    { file = "**/*.py" },
    { file = "**/*.cpp" },
    { file = "**/*.cu" },
    { file = "**/*.cuh" },
    { file = "**/*.h" },
    { file = "**/*.hpp" },
    { env = "TORCH_CUDA_ARCH_LIST" },
    { env = "CUDA_HOME" },
    { env = "CC" },
    { env = "CXX" },
]
