[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointrope"
version = "0.1.0+cu126torch2.13"
dependencies = ["torch"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "setup.py" },
    { file = "__init__.py" },
    { file = "pointrope_cuda.py" },
    { file = "pointrope_torch.py" },
    { file = "pointrope.cpp" },
    { file = "kernels.cu" },
    { env = "TORCH_CUDA_ARCH_LIST" },
    { env = "CUDA_HOME" },
    { env = "CC" },
    { env = "CXX" },
]
