[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch3d-ops"
version = "0.7.9+cu126torch2.13"
description = "Minimal PyTorch3D subset with point-cloud operators and chamfer distance"
authors = [{ name = "FAIR" }]
dependencies = ["torch"]

[project.urls]
Homepage = "https://github.com/facebookresearch/pytorch3d"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "setup.py" },
    { file = "pytorch3d_ops/**/*.py" },
    { file = "pytorch3d_ops/csrc/**/*.cpp" },
    { file = "pytorch3d_ops/csrc/**/*.cu" },
    { file = "pytorch3d_ops/csrc/**/*.cuh" },
    { file = "pytorch3d_ops/csrc/**/*.h" },
    { file = "pytorch3d_ops/csrc/**/*.hpp" },
    { env = "TORCH_CUDA_ARCH_LIST" },
    { env = "CUDA_HOME" },
    { env = "CC" },
    { env = "CXX" },
]
